added aggegate XRP API
